force-app/main/default/objects/XLSX_Field_Mapping__mdt/XLSX_Field_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Mapping between Excel column headers and Salesforce fields.</description>
    <label>XLSX Field Mapping</label>
    <pluralLabel>XLSX Field Mappings</pluralLabel>
</CustomObject>