force-app/main/default/objects/XLSX_Field_Mapping__mdt/fields/Aggregate_Function__c.field-meta.xml
<CustomField>
    <fullName>Aggregate_Function__c</fullName>
    <description>Leave blank for a normal record-creation column mapping (consumed by SObjectCreatorRowHandler: Excel_Column_Header__c -> Target_SObject__c/Target_Field__c). Set to turn this mapping row into an aggregation spec instead (consumed by AggregateRowHandler/FieldWriteBackResultHandler): Excel_Column_Header__c names the column to aggregate, and Target_Field__c names the field on the request's Related Record Id to write the result into. Target_SObject__c is ignored for aggregation specs since the target record already exists.</description>
    <label>Aggregate Function</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUM</fullName>
            </value>
            <value>
                <fullName>COUNT</fullName>
            </value>
            <value>
                <fullName>MIN</fullName>
            </value>
            <value>
                <fullName>MAX</fullName>
            </value>
            <value>
                <fullName>AVERAGE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>