force-app/main/default/objects/XLSX_Field_Mapping__mdt/fields/Config__c.field-meta.xml
<CustomField>
    <fullName>Config__c</fullName>
    <label>Config</label>
    <referenceTo>XLSX_Reader_Config__mdt</referenceTo>
    <relationshipLabel>Field Mappings</relationshipLabel>
    <relationshipName>Field_Mappings</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>