force-app/main/default/objects/XLSX_Field_Mapping__mdt/fields/Excel_Column_Header__c.field-meta.xml
<CustomField>
    <fullName>Excel_Column_Header__c</fullName>
    <label>Excel Column Header</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>